<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <ImageView
    android:id="@+id/profile_image"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_margin="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:contentDescription="@string/todo" />
  
  <LinearLayout
    android:id="@+id/profile_info"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/profile_image"
    app:layout_constraintTop_toTopOf="@id/profile_image"
    app:layout_constraintBottom_toBottomOf="@id/profile_image">
    <TextView
      android:id="@+id/profile_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="@string/username"/>

    <TextView
      android:id="@+id/profile_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="@string/name"/>

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>